--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+    <header>
+      <nav>
+      </nav>
+    </header>
   </body>
 </html>
